--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,7 @@
 	<classpathentry kind="lib" path="lib/httpcore-ab-4.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/httpcore-nio-4.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/httpmime-4.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/ini4j-0.5.2-jdk14.jar"/>
+	<classpathentry kind="lib" path="lib/ini4j-0.5.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
