--- a/config.ini
+++ b/config.ini
@@ -11,7 +11,7 @@ FEEDBACK_LIMIT_FILTER = 1000
 
 ;võimaldab kasutada otsingut ka teistes eBay'des nt. Ebay.de, ebay.nl jne.
 ;lubatud väärtused (Global ID): http://developer.ebay.com/DevZone/finding/CallRef/Enums/GlobalIdList.html
-LOCALE = "EBAY-US"
+LOCALE = EBAY-US
 	
 ;CSV tähendab komaga eraldatud vääärtused, nt. "õun, kala, maja"
 [CSVLists]
