--- a/config.ini
+++ b/config.ini
@@ -23,7 +23,7 @@ CATEGORIES = 293,3270,156955
 MESSAGESTOUSERS = tere#kas antud toode on on veel olemas ja kas te saadata Euroopasse, Hello#do you send to europe?
 
 ;kasutajanimede nimekiri
-BLACKLISTEDUSERS = randomuser1, randomuser2, randomuser3
+BLACKLISTEDUSERS = randomuser1, randomuser2, randomuser3,2ndtimearound205, cathy1203
 
 [Dev]
 DEBUG = true
