--- a/config.ini
+++ b/config.ini
@@ -19,7 +19,7 @@ LOCALE = EBAY-US
 ; Kategooria ID leiad siit: http://developer.researchadvanced.com/tools/categoryBrowser.php 
 CATEGORIES = 293,3270,156955
 
-;formaat: title#message, title2#message. NB! koma ei tohid kasutada ainult elementide eraldamiseks, mitte tekstis!!!
+;formaat: title#message, title2#message. NB! koma tohid kasutada ainult elementide eraldamiseks, mitte tekstis!!!
 MESSAGESTOUSERS = tere#kas antud toode on on veel olemas ja kas te saadata Euroopasse, Hello#do you send to europe?
 
 ;kasutajanimede nimekiri
