--- a/.classpath
+++ b/.classpath
@@ -26,5 +26,6 @@
 	<classpathentry kind="lib" path="lib/httpmime-4.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/ini4j-0.5.2-jdk14.jar"/>
 	<classpathentry kind="lib" path="lib/ini4j-0.5.2.jar"/>
+	<classpathentry kind="lib" path="lib/joda-time-2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
