--- a/config.ini
+++ b/config.ini
@@ -15,9 +15,14 @@ LOCALE = EBAY-US
 	
 ;CSV tähendab komaga eraldatud vääärtused, nt. "õun, kala, maja"
 [CSVLists]
+
+USERS = username#password,username2#password2
+
+KEYWORDS = tom tom xl, iPhone 5S supercharger, battery
+
 ; Kategooria millest otsitakse eBayst, kuni 3tk ja ainult kategooria ID mitte nimed nt. "2941,11,1924218"
 ; Kategooria ID leiad siit: http://developer.researchadvanced.com/tools/categoryBrowser.php 
-CATEGORIES = 293,3270,156955
+CATEGORIES = 293,3270,156955#293,3270,156955#293,3270,156955
 
 ;formaat: title#message, title2#message. NB! koma tohid kasutada ainult elementide eraldamiseks, mitte tekstis!!!
 MESSAGESTOUSERS = tere#kas antud toode on on veel olemas ja kas te saadata Euroopasse, Hello#do you send to europe?
