--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,11 @@
+;NB: kõik numbrilised väärtused on täisarvud
+
 [BotMain]
-;hinnad USD, täisarv
+;hinnad, valuuta USD
 MIN_PRICE = 9
 MAX_PRICE = 99
 
-;kui palju vastuseid tagastatakse, täisarv
+;tagstatavate esemete arv
 RESULT_COUNT = 25
 
 ;kui feedback arv on suurem kui antud number, siis otsingus kasutaja toodet ei kuvata
@@ -13,22 +15,29 @@ FEEDBACK_LIMIT_FILTER = 1000
 ;lubatud väärtused (Global ID): http://developer.ebay.com/DevZone/finding/CallRef/Enums/GlobalIdList.html
 LOCALE = EBAY-US
 	
+;sekudid, privaatsõnumite saatmisel teeb antud sekundeid pausi, et mitte näida liiga kahtlane ebay jaoks (ebayle vist saab aru et tegu on botiga kui liiga kiirelt tegutsed)
+TIMEOUT_BETWEEN_OPEN_PM_WINDOW = 10 
+	
 ;CSV tähendab komaga eraldatud vääärtused, nt. "õun, kala, maja"
 [CSVLists]
 
-USERS = username#password,username2#password2
+;formaat: name#password, name2#password2. NB! koma tohid kasutada ainult elementide eraldamiseks, mitte tekstis!!!
+USERS = user#pass,username2#password2
 
 KEYWORDS = tom tom xl, iPhone 5S supercharger, battery
 
-; Kategooria millest otsitakse eBayst, kuni 3tk ja ainult kategooria ID mitte nimed nt. "2941,11,1924218"
+; Kategooria millest otsitakse eBayst, kuni 3tk ühes grupis ja ainult kategooria ID mitte nimed nt. "2941,11,1924218"
 ; Kategooria ID leiad siit: http://developer.researchadvanced.com/tools/categoryBrowser.php 
+;grupid eraldad elemendiga # ja elemendid igas grupis eraldad ,
 CATEGORIES = 293,3270,156955#293,3270,156955#293,3270,156955
 
 ;formaat: title#message, title2#message. NB! koma tohid kasutada ainult elementide eraldamiseks, mitte tekstis!!!
 MESSAGESTOUSERS = tere#kas antud toode on on veel olemas ja kas te saadata Euroopasse, Hello#do you send to europe?
 
-;kasutajanimede nimekiri
+;kasutaja ID nimekiri
 BLACKLISTEDUSERS = randomuser1, randomuser2, randomuser3,2ndtimearound205, cathy1203
 
 [Dev]
-DEBUG = true
+;arendaja saedistus, võimaldab logida rohkem infor ekraanile
+;lubatud väärtused: true;false
+DEBUG = false
