--- a/config.ini
+++ b/config.ini
@@ -16,13 +16,13 @@ FEEDBACK_LIMIT_FILTER = 1000
 LOCALE = EBAY-US
 	
 ;sekudid, privaatsõnumite saatmisel teeb antud sekundeid pausi, et mitte näida liiga kahtlane ebay jaoks (ebayle vist saab aru et tegu on botiga kui liiga kiirelt tegutsed)
-TIMEOUT_BETWEEN_OPEN_PM_WINDOW = 10 
+TIMEOUT_BETWEEN_OPEN_PM_WINDOW = 0 
 	
 ;CSV tähendab komaga eraldatud vääärtused, nt. "õun, kala, maja"
 [CSVLists]
 
 ;formaat: name#password, name2#password2. NB! koma tohid kasutada ainult elementide eraldamiseks, mitte tekstis!!!
-USERS = user#pass,username2#password2
+USERS = superdealsyysi#Stupid123456,user#pass,username2#password2
 
 KEYWORDS = tom tom xl, iPhone 5S supercharger, battery
 
@@ -32,12 +32,12 @@ KEYWORDS = tom tom xl, iPhone 5S supercharger, battery
 CATEGORIES = 293,3270,156955#293,3270,156955#293,3270,156955
 
 ;formaat: title#message, title2#message. NB! koma tohid kasutada ainult elementide eraldamiseks, mitte tekstis!!!
-MESSAGESTOUSERS = tere#kas antud toode on on veel olemas ja kas te saadata Euroopasse, Hello#do you send to europe?
+MESSAGESTOUSERS = tere#Tere\nkas antud toode on on veel olemas ja kas te saadata Euroopasse, Hello#Hello\n do you send to europe?
 
 ;kasutaja ID nimekiri
-BLACKLISTEDUSERS = randomuser1, randomuser2, randomuser3,2ndtimearound205, cathy1203
+BLACKLISTEDUSERS = randomuser1, randomuser2, randomuser3,2ndtimearound205, cathy1203, madcheetah
 
 [Dev]
 ;arendaja saedistus, võimaldab logida rohkem infor ekraanile
 ;lubatud väärtused: true;false
-DEBUG = false
+DEBUG = true
