--- a/config.ini
+++ b/config.ini
@@ -22,7 +22,7 @@ TIMEOUT_BETWEEN_OPEN_PM_WINDOW = 0
 [CSVLists]
 
 ;formaat: name#password, name2#password2. NB! koma tohid kasutada ainult elementide eraldamiseks, mitte tekstis!!!
-USERS = superdealsyysi#Stupid123456,user#pass,username2#password2
+USERS = superdealsyysi#tupid123456,user#pass,username2#password2
 
 KEYWORDS = tom tom xl, iPhone 5S supercharger, battery
 
