redirect to personal message page

--- a/config.ini
+++ b/config.ini
@@ -15,8 +15,12 @@ FEEDBACK_LIMIT_FILTER = 1000
 ;lubatud väärtused (Global ID): http://developer.ebay.com/DevZone/finding/CallRef/Enums/GlobalIdList.html
 LOCALE = EBAY-US
 	
-;sekudid, privaatsõnumite saatmisel teeb antud sekundeid pausi, et mitte näida liiga kahtlane ebay jaoks (ebayle vist saab aru et tegu on botiga kui liiga kiirelt tegutsed)
+;sekundid, privaatsõnumite saatmisel teeb antud sekundeid pausi, et mitte näida liiga kahtlane ebay jaoks (ebayle vist saab aru et tegu on botiga kui liiga kiirelt tegutsed)
 TIMEOUT_BETWEEN_OPEN_PM_WINDOW = 0 
+
+;otselink annab võimaluse müüjaga otse kontakteeruda. Sisusse tuleb täpselt sama tekst mis mina valisin aga et bot lisab ühe lause ise juurde:
+;rea lõppu lisatakse Nr. 299249240 EsemeNimi
+PERSONAL_MESSAGE_HEADER = I would be interested to buy your item
 	
 ;CSV tähendab komaga eraldatud vääärtused, nt. "õun, kala, maja"
 [CSVLists]
