finishing for today

--- a/config.ini
+++ b/config.ini
@@ -22,7 +22,13 @@ TIMEOUT_BETWEEN_OPEN_PM_WINDOW = 0
 ;rea lõppu lisatakse Nr. 299249240 EsemeNimi
 PERSONAL_MESSAGE_HEADER = I would be interested to buy your item
 	
-;CSV tähendab komaga eraldatud vääärtused, nt. "õun, kala, maja"
+; MODE_NORMAL = 0 
+; võimaldab valida eelsavlestatud gruppe (kui eksisterivad) MODE_GROUPS = 1;
+APP_MODE = 0;
+
+	
+	
+;CSV tähendab komaga eraldatud väärtused, nt. "õun, kala, maja"
 [CSVLists]
 
 ;formaat: name#password, name2#password2. NB! koma tohid kasutada ainult elementide eraldamiseks, mitte tekstis!!!
