--- a/config.ini
+++ b/config.ini
@@ -24,9 +24,7 @@ PERSONAL_MESSAGE_HEADER = I would be interested to buy your item
 	
 ; MODE_NORMAL = 0 
 ; võimaldab valida eelsavlestatud gruppe (kui eksisterivad) MODE_GROUPS = 1;
-APP_MODE = 0;
-
-	
+APP_MODE = 1
 	
 ;CSV tähendab komaga eraldatud väärtused, nt. "õun, kala, maja"
 [CSVLists]
