fix+personal message modif

--- a/config.ini
+++ b/config.ini
@@ -20,7 +20,7 @@ TIMEOUT_BETWEEN_OPEN_PM_WINDOW = 0
 
 ;otselink annab võimaluse müüjaga otse kontakteeruda. Sisusse tuleb täpselt sama tekst mis mina valisin aga et bot lisab ühe lause ise juurde:
 ;rea lõppu lisatakse Nr. 299249240 EsemeNimi
-PERSONAL_MESSAGE_HEADER = I would be interested to buy your item
+PERSONAL_MESSAGE_ADDON = The item I am talking about is 
 	
 ; MODE_NORMAL = 0 
 ; võimaldab valida eelsavlestatud gruppe (kui eksisterivad) MODE_GROUPS = 1;
@@ -40,7 +40,7 @@ KEYWORDS = tom tom xl, iPhone 5S supercharger, battery
 CATEGORIES = 293,3270,156955#293,3270,156955#293,3270,156955
 
 ;formaat: title#message, title2#message. NB! koma tohid kasutada ainult elementide eraldamiseks, mitte tekstis!!!
-MESSAGESTOUSERS = tere#Tere\nkas antud toode on on veel olemas ja kas te saadata Euroopasse, Hello#Hello\n do you send to europe?
+MESSAGESTOUSERS = tere#Tere\nkas antud toode on on ***PERSONAL_MESSAGE_ADDON*** veel olemas ja kas te saadata Euroopasse, Hello#Hello\n do you send to europe? ***PERSONAL_MESSAGE_ADDON***
 
 ;kasutaja ID nimekiri
 BLACKLISTEDUSERS = randomuser1, randomuser2, randomuser3,2ndtimearound205, cathy1203, madcheetah
