--- a/config.ini
+++ b/config.ini
@@ -24,7 +24,7 @@ PERSONAL_MESSAGE_ADDON = The item I am talking about is
 	
 ; MODE_NORMAL = 0 
 ; võimaldab valida eelsavlestatud gruppe (kui eksisterivad) MODE_GROUPS = 1;
-APP_MODE = 1
+APP_MODE = 0
 	
 ;CSV tähendab komaga eraldatud väärtused, nt. "õun, kala, maja"
 [CSVLists]
@@ -48,4 +48,4 @@ BLACKLISTEDUSERS = randomuser1, randomuser2, randomuser3,2ndtimearound205, cathy
 [Dev]
 ;arendaja saedistus, võimaldab logida rohkem infor ekraanile
 ;lubatud väärtused: true;false
-DEBUG = true
+DEBUG = false
