quick and dirty + project structure change

--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,8 @@
 
 [BotMain]
 
+PRICES = 10#50,100#150
+
 ;tagstatavate esemete arv päringu kohta
 RESULT_COUNT = 25
 
@@ -38,4 +40,4 @@ BLACKLISTEDUSERS = randomuser1, randomuser2, randomuser3,2ndtimearound205, cathy
 [Dev]
 ;arendaja saedistus, võimaldab logida rohkem infot ekraanile
 ;lubatud väärtused: true;false
-DEBUG = false
+DEBUG = true
