--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,7 @@
 ;NB: kõik numbrilised väärtused on täisarvud
 
 [BotMain]
-
-PRICES = 10#50,100#150
-
-;tagstatavate esemete arv päringu kohta
+;tagastatavate esemete arv päringu kohta
 RESULT_COUNT = 25
 
 ;kui feedback arv on suurem kui antud number, siis otsingus kasutaja toodet ei kuvata
@@ -20,16 +17,8 @@ PERSONAL_MESSAGE_ADDON = The item I am talking about is
 	
 ;CSV tähendab komaga eraldatud väärtused, nt. "õun, kala, maja"
 [CSVLists]
-
 ;formaat: name#password, name2#password2. NB! koma tohid kasutada ainult elementide eraldamiseks, mitte tekstis!!!
 USERS = superdealsyysi#Stupid123456,user#pass,username2#password2
-
-KEYWORDS = tom tom xl, iPhone 5S supercharger, battery
-
-; Kategooria millest otsitakse eBayst, kuni 3tk ühes grupis ja ainult kategooria ID mitte nimed nt. "2941,11,1924218"
-; Kategooria ID leiad siit: http://developer.researchadvanced.com/tools/categoryBrowser.php 
-;grupid eraldad elemendiga # ja elemendid igas grupis eraldad ,
-CATEGORIES = 293,3270,156955#293,3270,156955#293,3270,156955
 
 ;formaat: title#message, title2#message. NB! koma tohid kasutada ainult elementide eraldamiseks, mitte tekstis!!!
 MESSAGESTOUSERS = tere#Tere\nkas antud toode on on ***PERSONAL_MESSAGE_ADDON*** veel olemas ja kas te saadata Euroopasse, Hello#Hello\n do you send to europe? ***PERSONAL_MESSAGE_ADDON***
